# utils

./: .gitignore  README.md  proxymaker.py  word_shuffle.py  wordle.py
PyTet/: pytet.py
goodraw/: BUILDING.md  CMakeLists.txt  CMakePresets.json  build-windows-release.bat  build-windows.bat  build-windows.ps1  deploy-qt-advanced.bat  deploy-qt-debug.bat  deploy-qt-release.bat  vcpkg.json
goodraw/include/: colortransform.h  glimagewidget.h  glsl_shaders.h  halfimage.h  mainwindow.h  precisionslider.h  rawdecoder.h
goodraw/src/: glimagewidget.cpp  main.cpp  mainwindow.cpp  ocio_transform.cpp  precisionslider.cpp  rawdecoder.cpp
